[project]
name = "stnav"
version = "0.1.0"
description = "Stochastic Terrain Navigator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fvcore>=0.1.5.post20221221",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.6",
    "noise>=1.2.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "thop>=0.1.1.post2209072238",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
